# adventofcode-rust

./: .gitignore  Cargo.toml  answers.txt  justfile  rustfmt.toml
aoc/: Cargo.toml
aoc/src/: input.rs  lib.rs  stats.rs
aoc_cli/: Cargo.toml
aoc_cli/src/: lib.rs  list.rs  run.rs  terminal_backend.rs  terminal_writer.rs
inputs/2020/: day09_real.txt  day09_test.txt
scripts/: get-latest-solution.sh  tee-uncolored.sh
src/: main.rs
src/util/: complex.rs  coords.rs  err.rs  grid.rs  iter.rs  math.rs  mod.rs  signed.rs
src/year2019/: day01.rs  day02.rs  day03.rs  day05.rs  day07.rs  day09.rs  day11.rs  day2.rs  day5.rs  day9.rs  mod.rs
src/year2019/intcode/: core.rs  io.rs  mod.rs  op.rs
src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  game.rs  mod.rs
src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day5.rs  day7.rs  day8.rs  day9.rs
src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day25.rs  mod.rs
