[package]
name = "adventofcode-rust"
version = "0.1.0"
authors = ["Fernando Matsumoto <ferkmatsumoto@gmail.com>"]
edition = "2021"

[profile.release]
debug = true

[dependencies]
aoc = { path = "aoc" }
aoc_cli = { path = "aoc_cli" }
rust-embed = "6.2.0"
anyhow = "1.0.48"
itertools = "0.10.1"
linkme = "0.2.7"
paste = "1.0.6"
regex = "1.5.4"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
ndarray = "0.15.4"
thiserror = "1.0.30"

[workspace]
members = [
    "aoc",
    "aoc_cli",
]

[features]
